Update demo page to use NPM CDN for analytics-client library

--- a/public/demo/index.html
+++ b/public/demo/index.html
@@ -157,7 +157,7 @@ Waiting for events...
         </div>
     </div>
 
-    <script src="analytics-client.min.js"></script>
+    <script src="https://unpkg.com/@trainerday/analytics-client@latest/dist/analytics-client.min.js"></script>
     <script>
         // Alias for cleaner code
         var analytics = mixpanel;
